[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Sprites/Coal.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Blaze_particle/Blaze_particle.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 112.285

[sub_resource type="Animation" id=6]
resource_name = "Blaze"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "refresh_blaze"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_blaze_particles"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Normal"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walking"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -7 ), Vector2( 0, 0 ) ]
}

[sub_resource type="AnimationNodeAdd2" id=15]

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Blaze"

[sub_resource type="AnimationNodeOneShot" id=17]

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Normal"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Walking"

[sub_resource type="AnimationNodeBlend2" id=8]

[sub_resource type="AnimationNodeBlendTree" id=12]
graph_offset = Vector2( -380.621, 173.975 )
nodes/Add2/node = SubResource( 15 )
nodes/Add2/position = Vector2( 900, 220 )
nodes/Blaze/node = SubResource( 7 )
nodes/Blaze/position = Vector2( 400, 540 )
nodes/Blazing/node = SubResource( 17 )
nodes/Blazing/position = Vector2( 660, 380 )
nodes/Idle/node = SubResource( 9 )
nodes/Idle/position = Vector2( 400, 100 )
nodes/Normal/node = SubResource( 16 )
nodes/Normal/position = Vector2( 400, 400 )
nodes/Walk/node = SubResource( 11 )
nodes/Walk/position = Vector2( 400, 260 )
nodes/Walking/node = SubResource( 8 )
nodes/Walking/position = Vector2( 620, 140 )
nodes/output/position = Vector2( 1160, 260 )
node_connections = [ "output", 0, "Add2", "Walking", 0, "Idle", "Walking", 1, "Walk", "Add2", 0, "Walking", "Add2", 1, "Blazing", "Blazing", 0, "Normal", "Blazing", 1, "Blaze" ]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 2 )
jump_height = 135.0
jump_time_to_peak = 0.5
jump_time_to_descent = 0.3
Blaze_emission = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 4 )
polygon = PoolVector2Array( -12, 28, 8, 28, 8, 12, 16, 12, 20, -20, -8, -24, -24, -4, -16, 12, -12, 12 )

[node name="Blaze" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blaze"]
shape = SubResource( 2 )

[node name="Blaze_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blaze = SubResource( 6 )
anims/Idle = SubResource( 3 )
anims/Normal = SubResource( 13 )
anims/RESET = SubResource( 14 )
anims/Walking = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
parameters/Add2/add_amount = 1.0
parameters/Blazing/active = false
parameters/Walking/blend_amount = 0.0

[connection signal="body_entered" from="Blaze" to="." method="_on_Blaze_body_entered"]
[connection signal="timeout" from="Blaze_timer" to="." method="_on_Blaze_timer_timeout"]
